# DoubleMarkerSim

./: .gitignore  .nojekyll  Makefile  README.md  downs.html  downs.ipynb  pyproject.toml  sim.sh
docs/: downs.html
src/: run.py
src/down_syndrome_screening/: analysis.py  models.py
